package Game.Entities.Races;

import Game.Entities.Statistics;

public class Dwarf extends Race{
    public Dwarf() {
        super("Dwarf", new Statistics(0, 6, 0, 0, 0));
    }
}
