package Game.Entities.Races;

import Game.Entities.Statistics;

public class Human extends Race{
    public Human() {
        super("Human", new Statistics(2, 2, 2, 2, 2));
    }
}
