package game.entities.races;

import game.entities.Statistics;

public class Elf extends Race{
    public Elf() {
        super("Elf", new Statistics(0, 0, 6, 0, 0));
    }
}
